:bug: Corrigido erros de autenticacao
