# docs/swagger.json
@@ -6,11 +6,16 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:3005",
+    "host": "gymapi.kadu.tec.br",
     "basePath": "/api/v1",
     "paths": {
         "/joints": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a list of all joints",
                 "consumes": [
                     "application/json"
@@ -28,7 +33,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -47,12 +52,18 @@
                             ]
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ResponseUnauthorized"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -70,6 +81,11 @@
         },
         "/movements": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a list of all possible movements",
                 "consumes": [
                     "application/json"
@@ -87,7 +103,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -106,12 +122,18 @@
                             ]
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ResponseUnauthorized"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -129,6 +151,11 @@
         },
         "/muscles": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a hierarchical list of all muscle groups with their portions",
                 "consumes": [
                     "application/json"
@@ -146,7 +173,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -165,12 +192,18 @@
                             ]
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ResponseUnauthorized"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -188,6 +221,11 @@
         },
         "/muscles/groups": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a list of all muscle groups without their portions",
                 "consumes": [
                     "application/json"
@@ -205,7 +243,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -224,12 +262,18 @@
                             ]
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ResponseUnauthorized"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -247,6 +291,11 @@
         },
         "/muscles/movement-map": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a list of all muscle-movement-joint relationships with optional filtering",
                 "consumes": [
                     "application/json"
@@ -290,7 +339,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -309,12 +358,18 @@
                             ]
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ResponseUnauthorized"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -332,6 +387,11 @@
         },
         "/muscles/portions": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a list of all muscle portions with their group IDs",
                 "consumes": [
                     "application/json"
@@ -349,7 +409,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -368,12 +428,18 @@
                             ]
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ResponseUnauthorized"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/controllers.ResponseSwegger"
+                                    "$ref": "#/definitions/controllers.ResponseDescription"
                                 },
                                 {
                                     "type": "object",
@@ -399,7 +465,7 @@
                 }
             }
         },
-        "controllers.ResponseSwegger": {
+        "controllers.ResponseDescription": {
             "type": "object",
             "properties": {
                 "data": {},
@@ -407,6 +473,14 @@
                     "$ref": "#/definitions/controllers.MetaData"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.ResponseUnauthorized": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
@@ -480,6 +554,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "description": "Type \"Bearer\" followed by a space tour Token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
